test/should_pass/inh_attrib_001.grg
actions inh_attrib_001 using inh_attrib_model_001;

rule r {
	pattern {
	}
	replace {
	}
}

