test/should_fail/inh_attrib_011.grg
actions inh_attrib_011 using inh_attrib_model_011;

rule r {
	pattern {
	}
	replace {
	}
}

